Fixes to product and basket pages on small screens
Minimum width on quantity column to avoid breaking up the input-group; wider quantity box on single product page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -338,6 +338,10 @@ a {
     background-color: #73d2de;
 }
 
+/*** Basket page ***/
+.qty-column {
+    min-width: 9em;
+}
 
 /*** Mailchimp **/
 
